[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/screens/dialogue/ReplyTimeline.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/UI_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/ui/UI_texture.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 114, 9 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.5, 3.5 )

[node name="ReplyTimeline" type="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -250.0
rect_min_size = Vector2( 0, 15 )
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 3
theme = ExtResource( 2 )
texture = ExtResource( 3 )
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -35.0
margin_right = 50.0
margin_bottom = -14.0
text = "reply
name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AreaCollision" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaCollision"]
position = Vector2( 0, 10 )
shape = SubResource( 2 )

[node name="AreaEffect" type="Area2D" parent="."]
position = Vector2( 8, 8 )
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaEffect"]
position = Vector2( -0.5, -0.5 )
shape = SubResource( 1 )

[node name="TextureRect" type="ColorRect" parent="AreaEffect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4.0
margin_top = -4.0
margin_right = 3.0
margin_bottom = 3.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[connection signal="area_entered" from="AreaCollision" to="." method="_on_AreaCollision_area_entered"]
[connection signal="gui_input" from="TextureRect" to="." method="_on_drag_gui_input"]
